# glTF-Maya-Exporter

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md  bootstrap.sh
docs/: PBR_Parameters.txt  SkinCluter.md  xgen.md
scripts/: glTFExporterOptions.mel  glTFExporterOptions.res.mel
src/dummyserver/: dummy-server.cc
src/glTFExporter/: glTFExporter.cpp  glTFExporterRegister.cpp
src/hotreload/: HotReloadExporter.cc  HotReloadExporter.h  HotReloadExporterLogic.cc  HotReloadExporterLogic.h  HotReloadExporterPlatform.cc  HotReloadExporterPlatform.h  XGenHairProcessInputOutput.h  XGenSplineProcessInputOutput.h  XGenSplineToCyHair.cc  XGenSplineToCyHair.h  XGenSplineToXPD.cc  XGenSplineToXPD.h  cyhair-writer.cc  cyhair-writer.h  hotreload.fbs
src/kml/: Mesh.h  Node.cpp  Node.h  SaveToDraco.cpp  Texture.h  glTFExporter.cpp
testscenes/xgen-widthramp/: xgen-igs-widthramp.ma
